# vocab-app

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: config.py  main.py
app/models/: schemas.py
app/routers/: translate.py  vocab.py
app/services/: db.py  gemini.py  tokenize.py
app/static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_db.py  test_gemini.py  test_tokenize.py  test_translate_router.py
